Fix overlay on mobile

--- a/static/sass/_pattern_navigation.scss
+++ b/static/sass/_pattern_navigation.scss
@@ -7,15 +7,15 @@ $ubuntu-logo-width--desktop: $ubuntu-logo-svg-width + 2 * $grid-margin-width;
 $ubuntu-logo-width--mobile: $ubuntu-logo-svg-width + 2 * $sph--large;
 
 @mixin ubuntu-p-navigation {
-  // .dropdown-window-overlay {
-  //   background-color: rgba(17, 17, 17, 0.4);
-  //   height: 100%;
-  //   position: fixed;
-  //   top: 0;
-  //   transition: opacity 0.5s ease-in-out;
-  //   width: 100%;
-  //   z-index: 7;
-  // }
+  .dropdown-window-overlay {
+    background-color: rgba(17, 17, 17, 0.4);
+    height: 100%;
+    position: fixed;
+    top: 0;
+    transition: opacity 0.5s ease-in-out;
+    width: 100%;
+    z-index: 7;
+  }
 
   @media (max-width: $breakpoint-navigation-threshold) {
     .dropdown-window.is-enterprise {
